Code changes to improve code quality.